[package]
name = "sass-rs"
version = "0.0.18"
authors = ["Marius Seritan <github@seritan.net>"]
keywords = ["sass", "ffi"]
description = "Higher level binding for the Sass library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/compass-rs/sass-rs.git"
homepage = "https://github.com/compass-rs/sass-rs"
documentation = "http://compass-rs.github.io/sass-rs/"


[lib]
name = "sass_rs"

[dependencies]
# sass-sys = { git = "https://github.com/compass-rs/sass-sys" }
sass-sys = { path = "./sass-sys" }
libc = "0.2"
