[package]
name = "sass-rs"
version = "0.2.1"
authors = ["Marius Seritan <github@seritan.net>"]
keywords = ["sass", "ffi"]
description = "Higher level binding for the Sass library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/compass-rs/sass-rs.git"
homepage = "https://github.com/compass-rs/sass-rs"

[lib]
name = "sass_rs"

[dependencies]
# sass-sys = { path = "./sass-sys" }
sass-sys = "0.4"
libc = "0.2"
