[package]
name = "sass-rs"
version = "0.2.2"
authors = [
    "Marius Seritan <github@seritan.net>",
    "Vincent Prouillet <prouillet.vincent@gmail.com>"
]
keywords = ["sass", "scss", "ffi"]
description = "Higher level binding for the Sass library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/compass-rs/sass-rs.git"
homepage = "https://github.com/compass-rs/sass-rs"
categories = ["web-programming", "development-tools::build-utils"]

[lib]
name = "sass_rs"

[dependencies]
sass-sys = { version = "0.4", path = "./sass-sys" }
libc = "0.2"
