[package]

name = "sass-sys"
version = "0.4.6"
authors = [
    "Marius Seritan <github@seritan.net>",
    "Vincent Prouillet <prouillet.vincent@gmail.com>"
]
links = "sass"
build = "build.rs"

keywords = ["sass", "ffi"]
description = "Low level binding for the Sass library"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/compass-rs/sass-rs.git"
homepage = "https://github.com/compass-rs/sass-rs"

[build-dependencies]
pkg-config = "0.3"
# bindgen = "0.36"

[dependencies]
libc = "0.2"

[target.'cfg(target_env = "msvc")'.build-dependencies]
gcc = "0.3.51"
