[package]

name = "sass-sys"
version = "0.4.16"
authors = [
    "Marius Seritan <github@seritan.net>",
    "Vincent Prouillet <prouillet.vincent@gmail.com>"
]
links = "sass"
build = "build.rs"

keywords = ["sass", "ffi"]
description = "Low level binding for the Sass library"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/compass-rs/sass-rs.git"
homepage = "https://github.com/compass-rs/sass-rs"
# https://github.com/NixOS/nixpkgs/issues/72972#issuecomment-554794824
exclude = ["libsass/test/e2e/unicode-pwd"]

[build-dependencies]
pkg-config = "0.3"
num_cpus = "1.9.0"
# bindgen = "0.51"

[dependencies]
libc = "0.2"

[target.'cfg(target_env = "msvc")'.build-dependencies]
cc = "1.0"
